# WindowsMemoryKV

./: .gitignore  LICENSE  README.md  cMakeList.txt
.github/workflows/: c-cpp.yml
Output/Release v1.0/: ReleaseNotes_1.0.md
Output/Release v1.1/: ReleaseNotes_1.1.md
doc/: Examples.md  feature list.md  performance testing.md
src/: WindowsMemoryKV.sln  buildall.bat  cleanall.bat  design objective.md  readme.md
src/Benchmarks/: Benchmarks.csproj  MemoryKVBenchmarks.cs
src/BenchmarksCpp/: CMakeLists.txt  MemoryKVBenchmarks.cpp
src/CSharpClientSample/: CSharpClientSample.csproj  Program.cs
src/CppClientSample/: CppClientSample.cpp  CppClientSample.vcxproj  CppClientSample.vcxproj.filters
src/IntegrationTests/: IntegrationTests.cs  IntegrationTests.csproj
src/MemoryKVLib/: ConfigOptions.h  HeaderBlock.cpp  HeaderBlock.h  ILogger.h  MemoryKV.cpp  MemoryKV.h  MemoryKVHostServer.cpp  MemoryKVHostServer.h  MemoryKVLib.cpp  MemoryKVLib.vcxproj  MemoryKVLib.vcxproj.filters  NamedPipeClient.cpp  NamedPipeClient.h  SimpleFileLogger.cpp  SimpleFileLogger.h
src/MemoryKVLib.Net/: MemoryKV.cs  MemoryKVHostServer.cs  MemoryKVLib.Net.csproj  MemoryKVLib.Net.csproj.Backup.tmp  MemoryKVNativeCall.cs
src/MemoryKVLib.Net.Tests/: BoundaryTests.cs  MemoryKVLib.Net.Tests.csproj  MemoryKVLibTests.cs  xunit.runner.json
src/MemoryKVLib_GTest/: BoundaryTests.cpp  FunctionTests.cpp  MemoryKVLib_GTest.vcxproj  MemoryLeakTests.cpp  MockLogger.h
src/WindowsMemoryKVService/: CommandLineParser.cpp  CommandLineParser.h  CppNamedPipeServer.cpp  NamedPipeServer.cpp  NamedPipeServer.h  (+3 more)
(+17 files in other folders)
